telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestAbsClassAndMethodBody.java
package tests;

public abstract class A {

	public A() {
		// TODO Auto-generated constructor stub
	}

	abstract void m(int x);
	void m2(int x){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}
