telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestAbstractMethodNoBodyFail.java
package tests;

public class A {

	public A() {
		// TODO Auto-generated constructor stub
	}

	void m(int x);
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

